<resources>
    <string name="app_name">Quiz Games</string>
    <!-- Main Fragment -->
    <string name="play">Play</string>
    <string name="topScores">Top scores</string>
    <string name="about">About</string>

    <!-- QuizAPI Selection Fragment -->
    <string name="carsQuiz">Cars quiz</string>
    <string name="logosQuiz">Logos quiz</string>
    <string name="citiesQuiz">Cities quiz</string>

    <!-- Activity Quiz -->
    <string name="timeLeft">Time left: %d</string>
    <string name="score">Score: %d</string>
    <string name="questionPosition">%1$d of %2$d</string>
    <string name="typeAnswer">Type your answer here...</string>

    <!-- Score Activity -->
    <string name="scoreResult">Your score is %d.</string>
    <string name="answeredQuestions">You have answered %d questions.</string>
    <string name="submitScore">Submit</string>
    <string name="enterNickname">Enter nickname:</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="nicknameEmpty">Nickname can\'t be empty. Please try again.</string>
    <string name="cancel">Cancel</string>
    <string name="scoreSubmitted">Score submitted successfully!</string>

    <!-- TopScoresViewPagerAdapter -->
    <!-- Top Scores tabs -->
    <string-array name="topScoresTabs">
        <item>Cars</item>
        <item>Logos</item>
        <item>Cities</item>
        <item>All</item>
    </string-array>

    <!-- TopScores row -->
    <string name="nameRow">Name:</string>
    <string name="scoreRow">Score:</string>

    <!-- About fragment -->
    <string name="quizVer">Quiz Games 1.0.0</string>
    <string name="developedBy">Developed by: Radoslav Yordanov</string>
    <string name="contact">Contact: radikan94@gmail.com</string>
    <string name="rights">All rights reserved 2016.</string>

    <!-- Network Dialog -->
    <string name="connectionMsg">Can\'t connect to the server. Please try again.</string>

    <!-- Login Activity -->
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="rememberMe">Remember me?</string>
    <string name="invalidCredentials">Invalid username or password. Please try again.</string>
    <string name="logout">Logout</string>
    <string name="logoutAsk">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Register Activity -->
    <string name="passwordConfirm">Confirm pass:</string>
    <string name="passwordDifferent">Password is different. Please try again.</string>
    <string name="passwordEmpty">Password can\'t be empty. Please try again.</string>
    <string name="usernameExists">Username exists. Please try again.</string>

    <string name="addContent">Add content</string>

    <!-- Add quiz Activity -->
    <string name="quizType">Quiz type:</string>
    <string name="quizImg">Image URL:</string>
    <string-array name="quizTypes">
        <item>Cars</item>
        <item>Logos</item>
        <item>Cities</item>
    </string-array>
    <string name="quizMultipleChoices">Multiple choices?</string>
    <string name="quizAnswer">Answer:</string>
    <string name="quizChoice1">Choice 1:</string>
    <string name="quizChoice2">Choice 2:</string>
    <string name="quizChoice3">Choice 3:</string>
    <string name="quizChoice4">Choice 4:</string>
    <string name="correctChoice">Correct choice:</string>
    <string-array name="correctChoices">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="add">Add</string>
    <string name="quizImgEmpty">Quiz image can\'t be empty. Please try again.</string>
    <string name="quizImgInvalid">Invalid quiz image URL. Please try again.</string>
    <string name="quizAnswerEmpty">Quiz answer can\'t be empty. Please try again.</string>
    <string name="quizChoiceEmpty">Quiz choice can\'t be empty. Please try again.</string>

    <!-- QuizTimeFragment -->
    <string name="timeLimit">Time limit</string>
    <string name="noLimit">No limit</string>
</resources>
