<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/scoreTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stopWatchTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/timeLeft"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/questionPositionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/questionPosition"
            android:textSize="20sp" />
    </RelativeLayout>

    <radoslav.yordanov.quizgames.View.NonSwipeViewPager
        android:id="@+id/quizPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>